fixed icon visibility on iOS

--- a/src/styles/components/consent-button-close.scss
+++ b/src/styles/components/consent-button-close.scss
@@ -13,5 +13,6 @@
   &__i {
     display: flex;
     width: 1.5rem;
+    height: 1.5rem;
   }
 }
